--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
     <link rel="shortcut icon" href="/assets/images/favicon/favicon.ico">
-    
+
+    <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}" >
   </head>
 
   
