--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
-    
+
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
@@ -13,7 +13,7 @@
     <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
     <link rel="shortcut icon" href="/assets/images/favicon/favicon.ico">
 
-    <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}" >
+   <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}" >
   </head>
 
   
@@ -25,23 +25,25 @@
       <p>Engaging Presentations</p>
     </div>
 
-<nav>
-  <ul>
-    {% assign navigation_pages = site.html_pages | sort: 'navigation_weight' %}
-    {% for p in navigation_pages %}
-      {% if p.navigation_weight %}
-        <li>
-          <a href="{{ p.url }}" {% if p.url == page.url %}class="active"{% endif %}>
-            {{ p.title }}
-          </a>
-        </li>
-      {% endif %}
-    {% endfor %}
-  </ul>
-</nav>
-
+  <nav>
+    <ul>
+      {% assign navigation_pages = site.html_pages | sort: 'navigation_weight' %}
+      {% for p in navigation_pages %}
+        {% if p.navigation_weight %}
+          <li>
+            <a href="{{ p.url }}" {% if p.url == page.url %}class="active"{% endif %}>
+              {{ p.title }}
+            </a>
+          </li>
+        {% endif %}
+      {% endfor %}
+    </ul>
+  </nav>
+  
     
-    {{ content }}
-    
+  {{ content }}
+  
+  <script src="/assets/js/carousel.js"></script>
   </body>
+
 </html>
