--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -108,3 +108,49 @@ nav li a {
 nav li a:hover {
   background-color: #111;
 }
+
+
+
+
+.carousel {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel-slide {
+  display: none;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  text-align: center;
+}
+
+.carousel-slide.initial-active {
+  display: block; /* makes sure first slide is visible before JS kicks in */
+}
+
+.carousel-slide.active {
+  display: block;
+}
+
+.slide-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.fixed-height-img {
+  height: 600px;
+  width: auto;
+  object-fit: contain;
+}
+
+.caption {
+  margin-bottom: 12px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #333;
+}
