add two Japan talks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,11 @@
   
     
   {{ content }}
-  
+
+<footer class="site-footer">
+  <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.</p>
+</footer>
+
   </body>
 
 </html>
