--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -156,3 +156,30 @@ nav li a:hover {
   display: table;
   clear: both;
 }
+
+.song-wrapper {
+  margin-bottom: 2em;
+}
+
+.song-title {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+
+.version-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 0.5em;
+}
+
+.version-wrapper span {
+  min-width: 60px;
+  font-weight: normal;
+}
+
+.version-wrapper audio {
+  width: 300px;
+  max-width: 100%;
+}
